Updating Ui and Configuring for deployment

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,9 +3,11 @@
 .App {
     min-height: 100vh;
     display: flex;
-    background-image: url("./background.png");
-    background-position: center;
-    background-size: cover;
+    color: rgba(255, 255, 255, 0.92);
+    background-color: #1a202c;
+    /* background-image: url("./background.png"); */
+    /* background-position: center; */
+    /* background-size: cover; */
 }
 
 ::-webkit-scrollbar {
